@@ -140,6 +140,10 @@ public class CompositeFieldTest extends AbstractRuntimeTest
 		assertEquals(true, first.of(aString).isFinal());
 		assertEquals(true, first.of(aString).isMandatory());
 		
+		assertEqualsUnmodifiable(list(aString, anInt, anEnum, anItem), eins  .getTemplates());
+		assertEqualsUnmodifiable(list(aString, anInt, anEnum, anItem), uno   .getTemplates());
+		assertEqualsUnmodifiable(list(aString, anInt, anEnum, anItem), second.getTemplates());
+		
 		assertEqualsUnmodifiable(list(eins.  of(aString), eins  .of(anInt), eins  .of(anEnum), eins  .of(anItem)), eins  .getComponents());
 		assertEqualsUnmodifiable(list(uno   .of(aString), uno   .of(anInt), uno   .of(anEnum), uno   .of(anItem)), uno   .getComponents());
 		assertEqualsUnmodifiable(list(second.of(aString), second.of(anInt), second.of(anEnum), second.of(anItem)), second.getComponents());
