@@ -7,6 +7,7 @@ omit bug fixes.
 The items are sorted inversely, i.e. lastest items are on top
 
 --------------------------------------------------------------------------
+* added CompositeField.getTemplates()
 * move ConnectToken and ServletUtil to package com.exedio.cope.misc
 	deprecated version is provided
 * move TransactionSlicer to package com.exedio.cope.misc
